#
# $Id: Makefile.am 265 2011-05-20 15:39:47Z gbc $
#

SUBDIRS = .

noinst_HEADERS = icon_bitmap.h print_page.h

pkglib_LIBRARIES = libx_fplot.a

libx_fplot_a_SOURCES = close_x_fplot.c get_gc.c show_x_fplot.c \
	pgbreak_fplot.c open_x_fplot.c too_small.c getfont_fplot.c \
	print_x_fplot.c hcopy_x_fplot.c

#
# eof
#
